tests/ui/derive/fail_primary_key_mismatch.stderr
error: primary_key `user_id` does not match any persisted field
 --> tests/ui/derive/fail_primary_key_mismatch.rs:6:42
  |
6 | #[foundry(table = "users", primary_key = "user_id")]
  |                                          ^^^^^^^^^
